feat: USEI13 unit tests implemented + USEI11-15 tests structure added